--- a/index.html
+++ b/index.html
@@ -1,83 +1,198 @@
-
-
-
 <!DOCTYPE html>
+
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-        rel="stylesheet">
-    <title>BOMBAY BADSHAH
 
-</title>
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link
+
+        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+
+        rel="stylesheet">
+
+    <title>BOMBAY BADSHAH</title>
+
     <style>
+
         body {
-            background-color: rgb(228, 255, 233);
+
+            margin: 0;
+
+            padding: 0;
+
+            height: 100vh;
+
+            font-family: "Roboto Mono", monospace;
+
+            background-attachment: fixed;
+
         }
+
+
+
+        body::before {
+
+            content: "";
+
+            position: absolute;
+
+            top: 0;
+
+            left: 0;
+
+            width: 100vw;
+
+            height: 115vh;
+
+            background-image: url("https://blogger.googleusercontent.com/img/a/AVvXsEhDvdhyPRx1spTez1zaxoH9ezjn3SZck1wUjB2NBjaSo16EWXPwb-e2unR_y45HCKzSgoB4pSPRmi-wayTJZ8wjVg9ui9kwmZAaAJaCPWVxoNEBgmR9FUfhBHIjHIHXT0clVdWeBjIwLOw0ajbH1TCYl2cUKN0DAdn8CB_qgakM96Go293EMX-BSd8K4Ig");
+
+            background-size: cover;
+
+            background-repeat: no-repeat;
+
+            background-position: center;
+
+            opacity: 0.5;
+
+            z-index: -1;
+
+        }
+
+
 
         .first {
+
             display: flex;
+
             margin-top: 10px;
+
             flex-direction: column;
+
             align-items: center;
+
+            position: relative;
+
+            text-align: center;
+
+            z-index: 1;
+
         }
+
+
 
         .first img {
+
             border-radius: 50%;
+
             width: 200px;
+
         }
+
+
 
         .first h1 {
+
             font-family: "Roboto Mono", monospace;
+
             text-align: center;
+
         }
+
+
 
         .first .pp {
-            color: #7a7a7a;
+
+            color: black;
+
             font-family: "Oswald", sans-serif;
+
+            font-weight: bold;
+
         }
+
+
 
         .join_btn {
+
             margin: 10px;
+
             padding: 5px 15px;
+
             background-color: #038620;
+
             border: 2px solid #038620;
+
             border-radius: 20px;
+
             font-weight: bold;
+
             color: white;
+
             font-weight: 700;
+
             cursor: pointer;
+
             font-size: 18px;
-            font-family: "Roboto Mono", sans-serif;
+
+            font-family: "Roboto Mono", monospace;
+
         }
+
+
 
         .join_btn:hover {
-            background-color: #0e86c6;
+
+            background-color: #08A9FF;
+
             border: 2px solid #08A9FF;
+
         }
+
+
 
         .first h2 {
+
             font-size: 15px;
+
             font-family: "Oswald", sans-serif;
+
         }
+
+
 
         .first .ppp {
+
             font-family: "Oswald", sans-serif;
+
             margin-top: 5px;
-            color: #3a3939;
+
+            color: black;
+
         }
 
+
+
         @media screen and (max-width: 500px) {
+
             .first h1 {
+
                 font-size: 27px;
+
             }
+
         }
-    </style>    
+
+    </style>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -97,39 +212,68 @@ src="https://www.facebook.com/tr?id=1606575050290660&ev=PageView&noscript=1"
 <!-- End Meta Pixel Code -->
 </head>
 
-<body>
-    <main>
-        <div class="first">
-            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEiGJdlJBxREzMI-qAvSXJdLx4b9CwS_fyF5a6ZRVat-hqX6k5lL-VVmjQ1SgFdcbfppF53706pztrG578f4SRU9ha8n6dEAbIXraVL3xA0zGgnky7zZFgXCeK9Ld1g2G9XJYJsBRMgAbo73oLFkyEOzDpqmwBaeP8QJdc2gEqN8RkCrqMtgmmaEVSK6rZA6"
-                alt="logo">
-            <h1>BOMBAY BADSHAH
 
-</h1>
-            <p class="pp">💰 Maximize Your Trading Profits with India's Youngest SEBI-Registered Research Analyst 📈🎓
+
+<body>
+
+    <main>
+
+        <div class="first">
+
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEh0IxMvW7bOQevpo44_JMWNURof0q_9oJqYxBoJNc8EcC7ixbnIgBoJ8_GctyeZ72lAMDliCtHaTwUpGdnTCdseXdpO19yCVuTeJlvwsUqOmh1m3hx-iLHo-7WSz8HMWXzIuyCT-UBZII24yfU2CpPmqwLOWMvehsPnEvs27ijYiPHJoRrQWSlAZtpVyhLt"
+
+                alt="logo">
+
+            <h1>BOMBAY BADSHAH™</h1>
+
+            <p class="pp">💰 Maximize Your Profits with India’s Best Cricket Predictions 📈🎓
+
             </p>
 
-            <a href="https://telegram.dog/+rBpVNouX8HhiZjZl" target="_blank">
+
+
+            <a href="https://t.me/+rBpVNouX8HhiZjZl" target="_blank">
+
                 <button class="join_btn">
+
                     <i class="fa-brands fa-telegram"></i> Join Telegram Channel
+
                 </button>
+
             </a>
-        </div>
-        </div>
+
         </div>
 
+
+
         <div class="first">
-            <h2>📞 Unlock Daily Free Nifty and Banknifty Calls! 🚀🔔</h2>
-            <p class="ppp">🤝 Join Our Growing Community of Over 4,800 + Successful Traders! 💯</p>
+
+            <h2>📞 Unlock Daily Free Cricket Predictions 🚀🔔</h2>
+
+            <p class="ppp">🤝 Become a Part of Our Thriving Community of 48,000 + earners! 💯</p>
+
             <p class="ppp" style="color: black;"><strong>100% Free:</strong> Absolutely No Hidden Fees or Charges—Only
+
                 Pure Value!</p>
-            <a href="https://telegram.dog/+rBpVNouX8HhiZjZl" target="_blank">
+
+            <a href="https://t.me/+rBpVNouX8HhiZjZl" target="_blank">
+
                 <button class="join_btn">
+
                     <i class="fa-brands fa-telegram"></i> Join Telegram Channel
+
                 </button>
+
             </a>
+
         </div>
+
     </main>
+
     <script src="https://kit.fontawesome.com/e1e43c61e6.js" crossorigin="anonymous"></script>
+
 </body>
+
+
 
 </html>
